--- a/src/App.css
+++ b/src/App.css
@@ -111,35 +111,12 @@ body {
   box-shadow: 0 5px 20px rgba(0,0,0,0.3);
 }
 
-/* Overlay */
-/* .overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.5);
-} */
-
 .overlay {
   position: fixed;
   inset: 0;
   background: rgba(0,0,0,0.5);
   z-index: 999;
 }
-
-/* Modal */
-/* .modal {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 400px;
-  max-width: 100%;
-  height: 100%;
-  background: white;
-  padding: 20px;
-  overflow-y: auto;
-  box-shadow: -10px 0 30px rgba(0,0,0,0.3);
-
-  color:#0b0c10;
-} */
 
 .modal {
   position: fixed;
@@ -161,18 +138,17 @@ body {
 .slide-in {
   animation: slideIn 0.3s ease forwards;
 }
-
 @keyframes slideIn {
   from { transform: translateX(100%); }
   to { transform: translateX(0); }
 }
 
-/* Cards */
+/* ------------------------- Cards -------------------------*/
 .activity-card {
   display: flex;
   justify-content: space-between;
   background: #1f2937;
-  border-radius: 15px;
+  border-radius: 12px;
   
   padding: 0px;
 
@@ -182,15 +158,20 @@ body {
   box-shadow: 0 10px 25px rgba(0,0,0,0.3);
 
   overflow: hidden;   /* keeps right corners clean */
+  
+
+  border: 2px solid #293544;
+
   align-items: stretch;  /* IMPORTANT */
 }
 
 .card-left {
   flex: 2;
-  padding: 15px;
+  padding: 15px 5px 25px 15px;  /* smaller top/bottom padding */
 }
 
 .card-title {
+  margin-top: 0px;
   margin-bottom: 12px;
   font-size: 18px;
   font-weight: 600;
@@ -208,6 +189,10 @@ body {
 }
 
 .stat-label {
+  font-size: 12px;
+  opacity: 0.6;
+}
+.meta-date {
   font-size: 12px;
   opacity: 0.6;
 }
@@ -232,29 +217,36 @@ body {
   width: 150px;
   display: flex;
   justify-content: flex-end;
-  width: 110px;         /* fixed image column */
+  width: 160px;         /* fixed image column */
 }
 
 .card-right img,
 .image-placeholder {
   width: 100%;
   height: 100%;
-  border-radius: 16px;
+  border-radius: 12px;
   object-fit: cover;
   background: #374151;
 }
 
 .page {
-  padding: 0 18px 120px 18px;  /* left/right spacing + bottom for tab bar */
+  padding: 5px 18px 120px 18px;  /* left/right spacing + bottom for tab bar */
+}
+
+
+.notes-preview {
+  font-size: 12px;      /* try 11px–13px */
+  margin-top: 2px;
 }
 
 
 
+/* ---------------------------------------------------------*/
 
 
 
 
-
+/* ------------------------ Modal ---------------------------*/
 
 .modal input,
 .modal textarea,
@@ -289,23 +281,9 @@ button {
   cursor: pointer;
 }
 
-
-
-
-
-
 page {
   color: black;
 }
-
-
-
-
-
-
-
-
-
 
 
 
@@ -326,9 +304,6 @@ page {
 }
 
 
-
-
-
 .row {
   display: flex;
   gap: 12px;
@@ -338,3 +313,28 @@ page {
 .row > * {
   flex: 1;
 }
+
+
+
+
+
+
+.modal {
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  transform: scale(1.1);
+}
+
+/* ---------------------------------------------------------*/
